--- a/AgeCalulator/index.html
+++ b/AgeCalulator/index.html
@@ -6,45 +6,48 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Age Calculator</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-  <div class="box">
-    <h3>Age Caluclator</h3>
-    <div class="datetime-picker">
-      <span>choose your birth date</span>
-      <input type="date" id="datePicker">
-      <span id="choseDate">April 19,1996</span>
-    </div>
-    <div class="age_calc">
-      <div class="age-box">
-        <p class="header">years</p>
-        <p class="value">21</p>
+  <div class="container">
+    <div class="box">
+      <h3>Age Caluclator</h3>
+      <div class="date-picker">
+        <span>choose your birth date</span>
+        <input type="date" id="datePicker">
+        <span id="choseDate">April 19,1996</span>
       </div>
-
-      <div class="age-box">
-        <p class="header">months</p>
-        <p class="value">252</p>
-      </div>
-
-      <div class="age-box">
-        <p class="header">days</p>
-        <p class="value">1234</p>
-      </div>
-
-      <div class="age-box">
-        <p class="header">hours</p>
-        <p class="value">123456</p>
-      </div>
-
-      <div class="age-box">
-        <p class="header">seconds</p>
-        <p class="value">252393933939</p>
-      </div>
-
-      <div class="age-box">
-        <p class="header">milli seconds</p>
-        <p class="value">252939939393939</p>
+      <div class="age_calc">
+        <div class="age-box">
+          <p class="header">years</p>
+          <p class="value">21</p>
+        </div>
+  
+        <div class="age-box">
+          <p class="header">months</p>
+          <p class="value">252</p>
+        </div>
+  
+        <div class="age-box">
+          <p class="header">days</p>
+          <p class="value">1234</p>
+        </div>
+  
+        <div class="age-box">
+          <p class="header">hours</p>
+          <p class="value">123456</p>
+        </div>
+  
+        <div class="age-box">
+          <p class="header">seconds</p>
+          <p class="value">252393933939</p>
+        </div>
+  
+        <div class="age-box">
+          <p class="header">milli seconds</p>
+          <p class="value">252939939393939</p>
+        </div>
       </div>
     </div>
   </div>
