--- a/AgeCalulator/index.html
+++ b/AgeCalulator/index.html
@@ -16,41 +16,42 @@
       <div class="date-picker">
         <span>choose your birth date</span>
         <input type="date" id="datePicker">
-        <span id="choseDate">April 19,1996</span>
+        <span id="choseDate"></span>
       </div>
-      <div class="age_calc">
+      <div class="age_calc expand">
         <div class="age-box">
           <p class="header">years</p>
-          <p class="value">21</p>
+          <p class="value" id="ageYear">0</p>
         </div>
   
         <div class="age-box">
           <p class="header">months</p>
-          <p class="value">252</p>
+          <p class="value" id="ageMonth">0</p>
         </div>
   
         <div class="age-box">
           <p class="header">days</p>
-          <p class="value">1234</p>
+          <p class="value" id="ageDays">0</p>
         </div>
   
         <div class="age-box">
           <p class="header">hours</p>
-          <p class="value">123456</p>
+          <p class="value" id="ageHours">0</p>
         </div>
   
         <div class="age-box">
           <p class="header">seconds</p>
-          <p class="value">252393933939</p>
+          <p class="value" id="ageSeconds">0</p>
         </div>
   
         <div class="age-box">
           <p class="header">milli seconds</p>
-          <p class="value">252939939393939</p>
+          <p class="value" id="agemilliseconds">0</p>
         </div>
       </div>
     </div>
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
